// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<TabPanel /> > should accept className 1`] = `
<div
  aria-labelledby="tabundefined"
  class="foobar"
  id="panelundefined"
  role="tabpanel"
/>
`;

exports[`<TabPanel /> > should allow for higher-order components 1`] = `
<div
  aria-labelledby="tabundefined"
  class="react-tabs__tab-panel"
  id="panelundefined"
  role="tabpanel"
/>
`;

exports[`<TabPanel /> > should have sane defaults 1`] = `
<div
  aria-labelledby="tabundefined"
  class="react-tabs__tab-panel"
  id="panelundefined"
  role="tabpanel"
/>
`;

exports[`<TabPanel /> > should not allow overriding all default properties 1`] = `
<div
  aria-labelledby="tabundefined"
  class="react-tabs__tab-panel"
  id="panelundefined"
  role="tabpanel"
/>
`;

exports[`<TabPanel /> > should pass through custom properties 1`] = `
<div
  aria-labelledby="tabundefined"
  class="react-tabs__tab-panel"
  data-tooltip="Tooltip contents"
  id="panelundefined"
  role="tabpanel"
/>
`;

exports[`<TabPanel /> > should render when forced 1`] = `
<div
  aria-labelledby="tabundefined"
  class="react-tabs__tab-panel"
  id="panelundefined"
  role="tabpanel"
>
  Hola
</div>
`;

exports[`<TabPanel /> > should render when selected 1`] = `
<div
  aria-labelledby="tabundefined"
  class="react-tabs__tab-panel react-tabs__tab-panel--selected"
  id="panelundefined"
  role="tabpanel"
>
  Hola
</div>
`;

exports[`<TabPanel /> > should support being selected 1`] = `
<div
  aria-labelledby="tababcd"
  class="react-tabs__tab-panel react-tabs__tab-panel--selected"
  id="panelabcd"
  role="tabpanel"
>
  Hola
</div>
`;

exports[`<TabPanel /> > should support being selected with custom class name 1`] = `
<div
  aria-labelledby="tababcd"
  class="react-tabs__tab-panel selected"
  id="panelabcd"
  role="tabpanel"
>
  Hola
</div>
`;
